Added overlay for round information

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <label>Bacteria Health: <span>09</span></label>
                         </div>
                         <div>
-                            <label class="align-right">Experiment <span>001</span></label>
+                            <label class="align-right">Experiment <span class="round-counter">001</span></label>
                             <section class="antibiotic-markers-container">
                                 <section class="antibiotic-marker"></section>
                                 <section class="antibiotic-marker"></section>
@@ -51,10 +51,27 @@
                         <section class="antibiotic antibiotic-b"></section>
                         <section class="antibiotic antibiotic-c"></section>
                     </section>
-                    <section id="legend">
-
-                    </section>
                 </div>
+                <!-- Round Overlay -->
+                <section id="round-overlay" class="hidden">
+                    <div>
+                        <h2>Experiment <span class="round-counter">001</span></h2>
+                        <section id="legend">
+                            <div class="legend-item">
+                                <section class="antibiotic antibiotic-a"></section>
+                                <label>-5</label>
+                            </div>
+                            <div class="legend-item">
+                                <section class="antibiotic antibiotic-b"></section>
+                                <label>-2</label>
+                            </div>
+                            <div class="legend-item">
+                                <section class="antibiotic antibiotic-c"></section>
+                                <label>-10</label>
+                            </div>
+                        </section>
+                    </div>
+                </section>
             </section>
             <!-- End Scene -->
             <section id="end-scene" class="hidden">
