--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <div class="game-scene">
                     <section id="game-stats">
                         <div>
-                            <label>Time Remaining:  <span>00:30</span></label>
-                            <label>Bacteria Health: <span>09</span></label>
+                            <label>Time Remaining:  <span id="time-counter">30</span></label>
+                            <label>Bacteria Health: <span id="health-counter">09</span></label>
                         </div>
                         <div>
                             <label class="align-right">Experiment <span class="round-counter">001</span></label>
@@ -57,18 +57,6 @@
                     <div>
                         <h2>Experiment <span class="round-counter">001</span></h2>
                         <section id="legend">
-                            <div class="legend-item">
-                                <section class="antibiotic antibiotic-a"></section>
-                                <label>-5</label>
-                            </div>
-                            <div class="legend-item">
-                                <section class="antibiotic antibiotic-b"></section>
-                                <label>-2</label>
-                            </div>
-                            <div class="legend-item">
-                                <section class="antibiotic antibiotic-c"></section>
-                                <label>-10</label>
-                            </div>
                         </section>
                     </div>
                 </section>
