Completed basic game states

--- a/index.html
+++ b/index.html
@@ -39,17 +39,14 @@
                         <div>
                             <label class="align-right">Experiment <span class="round-counter">001</span></label>
                             <section class="antibiotic-markers-container">
-                                <section class="antibiotic-marker"></section>
-                                <section class="antibiotic-marker"></section>
-                                <section class="antibiotic-marker antibiotic-marker--empty"></section>
                             </section>
                         </div>
                     </section>
                     <section id="petri-dish">
                         <section id="bacteria"></section>
-                        <section class="antibiotic antibiotic-a"></section>
-                        <section class="antibiotic antibiotic-b"></section>
-                        <section class="antibiotic antibiotic-c"></section>
+                        <section class="antibiotic antibiotic-a antibiotic-a-pos"></section>
+                        <section class="antibiotic antibiotic-b antibiotic-b-pos"></section>
+                        <section class="antibiotic antibiotic-c antibiotic-c-pos"></section>
                     </section>
                 </div>
                 <!-- Round Overlay -->
@@ -64,6 +61,7 @@
             <!-- End Scene -->
             <section id="end-scene" class="hidden">
                 <div class="game-scene">
+                    <h1>Game Over</h1>
                     <button id="restart-button" class="game-state-button">Restart Game</button>
                 </div>
             </section>
