Added retry level button and randomized antibiotic locations

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <section id="end-scene" class="hidden">
                 <div class="game-scene">
                     <h1>Game Over</h1>
+                    <button id="retry-button" class="game-state-button game-state-secondary-button">Restart Level</button>
                     <button id="restart-button" class="game-state-button">Restart Game</button>
                 </div>
             </section>
